--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
+<h2>Please Dont Do It In Your Real Machine!!! This A Prank Virus</h2>
 
+<a href="./Startthiss.html" class="btn btn-info" role="button">Start Virus</a>
